# ChangeLog for net-misc/memcached
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.95 2009/07/28 01:07:27 robbat2 Exp $

*memcached-1.4.0-r1 (28 Jul 2009)

  28 Jul 2009; Robin H. Johnson <robbat2@gentoo.org>
  +memcached-1.4.0-r1.ebuild,
  +files/memcached-1.4.0-fix-as-needed-linking.patch:
  Bug #278780: Any user that passes -DNDEBUG on their own is asking for
  trouble with the testapp and -debug versions. Ensure that the object files
  are seperated, and ignore the user for two of the binaries.

  26 Jul 2009; Brent Baude <ranger@gentoo.org> memcached-1.2.8.ebuild:
  Marking memcached-1.2.8 ppc64 for bug 268158

  26 Jul 2009; Brent Baude <ranger@gentoo.org> memcached-1.3.3-r2.ebuild:
  Marking memcached-1.3.3-r2 ppc64 for bug 271246

*memcached-1.4.0 (22 Jul 2009)

  22 Jul 2009; Robin H. Johnson <robbat2@gentoo.org>
  +memcached-1.4.0.ebuild:
  Bug #277515, version bump.

  19 Jul 2009; nixnut <nixnut@gentoo.org> memcached-1.3.3-r2.ebuild:
  ppc stable #271246

  15 Jun 2009; Raúl Porcel <armin76@gentoo.org> memcached-1.3.3-r2.ebuild:
  arm/ia64/sh/sparc stable wrt #271246

  04 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  memcached-1.3.3-r2.ebuild:
  Stable on alpha, bug #271246

  04 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  memcached-1.3.3-r2.ebuild:
  stable x86, bug 271246

  03 Jun 2009; Dawid Węgliński <cla@gentoo.org> memcached-1.3.3-r2.ebuild:
  Stable on amd64 (bug #271246)

  03 Jun 2009; Robin H. Johnson <robbat2@gentoo.org>
  memcached-1.3.3-r2.ebuild, +files/memcached-1.3.3-gcc4-slab-fixup.patch:
  Compilefix for USE="slabs-reassign" and picky GCC versions.

  26 May 2009; Jeroen Roovers <jer@gentoo.org> memcached-1.3.3-r2.ebuild:
  Stable for HPPA (bug #271246).

*memcached-1.3.3-r2 (26 May 2009)

  26 May 2009; Robin H. Johnson <robbat2@gentoo.org> +files/1.3.3/conf,
  +memcached-1.3.3-r2.ebuild, +files/1.3.3/init: