@@ -16,6 +16,7 @@ DIST memcached-1.2.6.tar.gz 217651 RMD160 9e6b6ad6e7cbe97b6a69f6e33f665b72659f81
 DIST memcached-1.3.0.tar.gz 234701 RMD160 226255b960ed67cf3d87d31d54431ea5597f0b05 SHA1 abacffa7391e2d1ce07473dfb50f954434eb6d5d SHA256 1ee7fba9a38ce2fe87246e2d62fff519009af384bf10e35c59a0dc7e309dccb3
 DIST memcached-1.3.3.tar.gz 260203 RMD160 c9ac975da30b3c005336b15c90216ce4e7e4bc47 SHA1 5f29c4b9af4e77643b0dceafbbd5db9811d349dd SHA256 3728c714c3c0194a429f754d739067bea193d66359a03a63437428bf4a2cce84
 DIST memcached-1.4.0.tar.gz 267420 RMD160 0bf281c694ba24672c4285c5f65137b2fbb3f484 SHA1 84881977cc34a1039ce619227ff2910d8e1e3e5b SHA256 b2648fb514fb36fa22cdeb468b8e8a8d49fef86a2cfbc7738f630e09b4977d35
+DIST memcached-1.4.1.tar.gz 277221 RMD160 18f2ef91a1f282e37316e107a90647cf246d98d9 SHA1 6acf8941c494edb4f19efc402b844a494608b679 SHA256 6bb6e52290bbe987990e83d57856f762402c9a625e9c4f8da785dc7f53acbd83
 EBUILD memcached-1.2.4.ebuild 1596 RMD160 1d25076e093fcc6817a2fee3925cf6bda29e88c6 SHA1 4dfd3357a56eeadc7f3c474c3090b801bece8e29 SHA256 8b742df52f2f5d94db43bcb9a1a2050d1bad2a81e202598f2aa17d012b1dd507
 EBUILD memcached-1.2.5.ebuild 1598 RMD160 b4fbcea843dcbc06ffe2ff1bbd802ff368076372 SHA1 999fec1f39ec188a29dc2aa7ee1182df2e5e1297 SHA256 e4ec2d7fe824e5f7c1a80637a28cb5367bdcb450cebf6b42a4f92cd35782915d
 EBUILD memcached-1.2.6.ebuild 1597 RMD160 682d5bf788206be153711a9fe185d900de74bd75 SHA1 6501e06b0d9a85baa760eebde6d5f9ca28c58cf4 SHA256 a6aa4c5961c916759a481e47c4b8a99f3fa2c37c07ef914bf805210569260ca9
@@ -25,5 +26,6 @@ EBUILD memcached-1.3.3-r2.ebuild 1801 RMD160 ae26f70e9ec2e382af1f64c24008bab50f4
 EBUILD memcached-1.3.3.ebuild 1686 RMD160 0618f8c1ede1cd8699211f715d175ea02e344d57 SHA1 f85975ede29e3f1f29826c26bfec5a6bd51f7335 SHA256 68d9322ab5e5b92ae7c19f89c093fccb39f6f872c54c06d8d8aed754da616606
 EBUILD memcached-1.4.0-r1.ebuild 2213 RMD160 7fcfa4f7db3a8c339982e0e4894e607a5ed6fc2f SHA1 444e9aa28a5dd817df5f6f3d1a4d68953905b0f6 SHA256 c7f2ae36536a37cd9c78744bf8bbcf7066c1821a9fbab4ab9c630859917b0e72
 EBUILD memcached-1.4.0.ebuild 1799 RMD160 5a7fad2797e1efecce52ed4a11c9036885ef3262 SHA1 971fe8741e9539baf636c2f0fab4f6d5e44c40f2 SHA256 8e60f6831823d08cf15078e92019112149bee91d6f68c3ab258c0c603737db9c
-MISC ChangeLog 16539 RMD160 fa6a35323e6087dba71997ec4c8d5b8b02669c8c SHA1 14beb360698982d0eda86e7b019a8f204223a584 SHA256 c8b482ad8eac2a69c0dda2ffb869cac9818fdb5c5add4f12f659e94a395f3d3b
+EBUILD memcached-1.4.1.ebuild 2210 RMD160 608a06661e6321158872929abc389ec9e2f9ce47 SHA1 84eb0481d963b704995525befa578de938735931 SHA256 db7d054dd3d22ff170ab991a0703d00e5c937cc81aa25bf75655c8f978974dab
+MISC ChangeLog 16668 RMD160 974dfca729258fd1e94c5de8639b3f62887849ee SHA1 65fdae3983443b263f9bba5f340bf6bd8e9907ac SHA256 325f83303d54af6abeb93b12352d490b3a5af20f6d3284b811e3d7577a385a0d
 MISC metadata.xml 966 RMD160 9da6a32f068f21da2b93ad45b4bba6147644e20a SHA1 a7080fc08dde81c21554beeb89b201d16efe08c1 SHA256 ce8186d4b0926cdc2ac0dcc49a737359b3f08a13396b5dc2cf05bf4a366b242b
