@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/memcached
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.95 2009/07/28 01:07:27 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.96 2009/08/30 08:05:04 robbat2 Exp $
+
+*memcached-1.4.1 (30 Aug 2009)
+
+  30 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +memcached-1.4.1.ebuild:
+  Version bump.
 
 *memcached-1.4.0-r1 (28 Jul 2009)
 
